<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".people.PeopleFragment"
    android:background="@color/backgroundWhite"
    android:parentActivityName="ru.eremin.generate.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:id="@+id/top_info"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="spread"
        android:gravity="center"
        android:padding="10dp"
        android:background="@color/backgroundGray">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:contentDescription="@string/fase"
            android:src="@drawable/ic_person_black_152dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:elevation="2dp"
        app:layout_constraintHeight_default="spread"
        app:layout_constraintTop_toBottomOf="@id/top_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:id="@+id/layout_header"
            style="@style/layout_user_data">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:id="@+id/name"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/text_size_header" />
        </LinearLayout>
        <View
            style="@style/style_line"/>
        <LinearLayout
            android:id="@+id/layout_gender"
            style="@style/layout_user_data">
            <TextView
                style="@style/text_field_user_header"
                android:text="@string/gender" />
            <TextView
                android:id="@+id/gender"
                style="@style/text_field_user_data"/>
        </LinearLayout>
        <View
            style="@style/style_line"/>
        <LinearLayout
            android:id="@+id/layout_age"
            style="@style/layout_user_data">
            <TextView
                style="@style/text_field_user_header"
                android:text="@string/age" />
            <TextView
                android:id="@+id/age"
                style="@style/text_field_user_data" />
        </LinearLayout>
        <View
            style="@style/style_line"/>
        <LinearLayout
            android:id="@+id/layout_avto"
            style="@style/layout_user_data">
            <TextView
                style="@style/text_field_user_header"
                android:text="@string/avto" />
            <TextView
                android:id="@+id/avto"
                style="@style/text_field_user_data" />
        </LinearLayout>
        <View
            style="@style/style_line"/>
        <LinearLayout
            android:id="@+id/layout_jobplace"
            style="@style/layout_user_data">
            <TextView
                style="@style/text_field_user_header"
                android:text="@string/jobplace" />
            <TextView
                android:id="@+id/jobplace"
                style="@style/text_field_user_data" />
        </LinearLayout>
        <View
            style="@style/style_line"/>
        <LinearLayout
            style="@style/layout_user_data">
            <TextView
                style="@style/text_field_user_header"
                android:text="@string/place" />
            <TextView
                android:id="@+id/area"
                style="@style/text_field_user_data" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>